Fix Download links text color in Dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -212,4 +212,7 @@ background: linear-gradient(to right, #140A17 0%, #041e2a 50%, #140A17 100%);
   code {
     color: #f87cba;
   }
+   .table {
+    color: #eceff4;
+  }
 }
